<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/frm"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:background="@drawable/background"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="109dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@drawable/logo" />

<!--        <TextView-->
<!--            android:id="@+id/tvesse"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:text="Esse- Essence for life"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold" />-->
    </FrameLayout>


    <RelativeLayout
        android:id="@+id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="36.7dp"
        app:layout_constraintTop_toBottomOf="@+id/frm"
        android:layout_marginRight="62dp"
        android:background="@drawable/blue_border_rounded_cornwe"
        tools:ignore="MissingConstraints">

        <!--        text-->
        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/usernameicon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="Username"
            android:paddingRight="27dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="13sp"/>
        <!--Icon-->
        <ImageView
            android:id="@+id/usernameicon"
            android:layout_width="20.7dp"
            android:layout_height="16.3dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/usernameicon"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lay2"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="12.7dp"
        android:layout_marginRight="62dp"

        android:background="@drawable/blue_border_rounded_cornwe"
        app:layout_constraintTop_toBottomOf="@+id/lay1"
        tools:ignore="MissingConstraints">

        <!--        text-->
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/passwordicon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="13sp"/>
        <ImageView
            android:id="@+id/passwordicon"
            android:layout_width="20.7dp"
            android:layout_height="15.3dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/passwordicon"/>

    </RelativeLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_shape"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay2" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:text="FORGET PASSWORD"
        android:textColor="#0290B3"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="OR"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/noacc"
            style="@style/textViewStyle"
            android:text="NO ACCOUNT? "
            android:textColor="#0290B3"
            android:textSize="12.5sp"
            android:gravity="end"/>

        <TextView
            android:id="@+id/RegisterHere"
            style="@style/textViewStyle"
            android:text="@string/SIGNUP"
            android:textColor="#1566e0"
            android:textStyle="bold"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>